--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,10 +1,13 @@
 $lightGreen: #b9e7e7;
-
+* {
+  margin: 0;
+  padding: 0;
+}
 .app {
   display: flex;
   justify-content: center;
   .container {
-    width: 1024px;
+    width: 100vw;
 
     .link {
       text-decoration: none;
