--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -6,8 +6,9 @@ $lightGreen: #b9e7e7;
 .app {
   display: flex;
   justify-content: center;
+  // max-width: 1400px;
   .container {
-    width: 100vw;
+    width: 1400px;
 
     .link {
       text-decoration: none;
@@ -63,5 +64,62 @@ $lightGreen: #b9e7e7;
         }
       }
     }
+}
+.navbar {
+  .container {
+    padding: 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .logo {
+      img {
+        width: 120px;
+      }
+    }
+    .links {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      h6 {
+        font-size: 16px;
+        font-weight: 300;
+      }
+
+      span {
+        cursor: pointer;
+      }
+
+      .write {
+        background-color: $lightGreen;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 300;
+        border: 1px solid white;
+
+        &:hover {
+          color: teal;
+          background-color: white;
+          border: 1px solid teal;
+        }
+      }
+    }
+  }
+}
+footer {
+  margin-top: 100px;
+  padding: 20px;
+  background-color: $lightGreen;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  img {
+    height: 50px;
+  }
 }
 }
