--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -8,7 +8,7 @@ $lightGreen: #b9e7e7;
   justify-content: center;
   // max-width: 1400px;
   .container {
-    width: 1400px;
+    width: 90%;
 
     .link {
       text-decoration: none;
@@ -64,62 +64,149 @@ $lightGreen: #b9e7e7;
         }
       }
     }
-}
-.navbar {
-  .container {
-    padding: 10px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .logo {
-      img {
-        width: 120px;
-      }
-    }
-    .links {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-
-      h6 {
-        font-size: 16px;
-        font-weight: 300;
-      }
-
-      span {
-        cursor: pointer;
-      }
-
-      .write {
-        background-color: $lightGreen;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
+    .navbar {
+      .container {
+        padding: 10px 0px;
         display: flex;
         align-items: center;
-        justify-content: center;
-        font-weight: 300;
-        border: 1px solid white;
+        justify-content: space-between;
+        width: 100%;
+        .logo {
+          img {
+            width: 120px;
+          }
+        }
+        .links {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+  
+          h6 {
+            font-size: 16px;
+            font-weight: 300;
+          }
+  
+          span {
+            cursor: pointer;
+          }
+  
+          .write {
+            background-color: $lightGreen;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 300;
+            border: 1px solid white;
+  
+            &:hover {
+              color: teal;
+              background-color: white;
+              border: 1px solid teal;
+            }
+          }
+        }
+      }
+    }
+    footer {
+      margin-top: 100px;
+      padding: 20px;
+      background-color: $lightGreen;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 12px;
+      img {
+        height: 50px;
+      }
+    }
+    .home {
+      .posts {
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+        gap: 150px;
 
-        &:hover {
-          color: teal;
-          background-color: white;
-          border: 1px solid teal;
+        .post {
+          display: flex;
+          gap: 5%;
+  
+          &:nth-child(2n + 1) {
+            flex-direction: row-reverse;
+          }
+  
+          .img {
+            flex: 1;  
+            .imgContainer{
+              position: relative;
+              img {
+                width: 100%;
+                max-height: 250px;
+                // object-fit: cover;
+                
+              }
+              &::after {
+                content: "";
+                width: 100%;
+                height: 100%;
+                background-color: $lightGreen;
+                display: block;
+                position: absolute;
+                top: 5%;
+                left: -10%;
+                z-index: -1;
+              }
+            }
+            
+          }
+          .content {
+            flex: 3;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            h1 {
+              font-size: 48px;
+            }
+
+            
+
+            p {
+              font-size: 18px;
+            }
+
+            button {
+              width: max-content;
+              padding: 10px 20px;
+              border: none;
+              cursor: pointer;
+              background-color: white;
+              border: 1px solid teal;
+              color: teal;
+
+              &:hover {
+                border: 1px solid white;
+                background-color: $lightGreen;
+                color: black;
+              }
+            }
+          }
         }
       }
     }
   }
 }
-footer {
-  margin-top: 100px;
-  padding: 20px;
-  background-color: $lightGreen;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 12px;
-  img {
-    height: 50px;
+
+@media (max-width: 860px) {
+  .link h1{
+    font-size: 24px !important;
   }
-}
+  .posts{
+    gap: 50px !important;
+  }
+  .content button{
+    margin-top: 10px !important;
+  }
 }
