--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,3 +1,6 @@
+// @import '~quill/dist/quill.core.css';
+// @import '~quill/dist/quill.bubble.css';
+// @import '~quill/dist/quill.snow.css';
 $lightGreen: #b9e7e7;
 * {
   margin: 0;
